--- a/Android/Maintenance/app/src/main/res/layout/add_employee.xml
+++ b/Android/Maintenance/app/src/main/res/layout/add_employee.xml
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Employee Name"
+                android:text="Employee Name*"
                 android:id="@+id/emp_name"
                 android:layout_marginTop="30dp"
                 android:layout_alignParentTop="true"
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Designation"
+                android:text="Designation*"
                 android:id="@+id/emp_designation"
                 android:layout_below="@+id/emp_name"
                 android:layout_alignParentStart="true"
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Department"
+                android:text="Department*"
                 android:id="@+id/emp_department"
                 android:layout_below="@+id/emp_designation"
                 android:layout_marginTop="30dp"
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Role"
+                android:text="Role*"
                 android:id="@+id/roles"
                 android:layout_below="@+id/emp_department"
                 android:layout_alignParentStart="true"
@@ -93,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Mobile NO"
+                android:text="Mobile No*"
                 android:id="@+id/mobile"
                 android:layout_marginTop="30dp"
                 android:layout_below="@+id/roles"
@@ -103,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Email"
+                android:text="Email*"
                 android:id="@+id/emp_email"
                 android:layout_marginTop="30dp"
                 android:layout_below="@id/mobile"
@@ -113,7 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Hour Rate"
+                android:text="Hour Rate*"
                 android:id="@+id/emp_rate"
                 android:layout_below="@id/emp_email"
                 android:layout_alignParentStart="true"
@@ -124,7 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Date of Join"
+                android:text="Date of Join*"
                 android:id="@+id/emp_join_date"
                 android:layout_below="@id/emp_rate"
                 android:layout_alignParentStart="true"
