--- a/Android/Maintenance/app/src/main/res/layout/report_tab.xml
+++ b/Android/Maintenance/app/src/main/res/layout/report_tab.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,18 +7,13 @@
     android:weightSum="1">
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:clickable="true"
         android:focusable="true"
         android:id="@+id/test"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_above="@+id/add_report">-->
+        android:layout_above="@+id/add_report">
 
         <ListView
             android:id="@+id/report_list_view"
@@ -31,49 +25,7 @@
             android:dividerHeight="5dp"
             android:layout_alignParentBottom="true" />
 
-    <!-- <RelativeLayout
-         android:layout_width="match_parent"
-         android:id="@+id/report_layout"
-         android:clickable="true"
-         android:background="#F2F2F2"
-         android:layout_height="80dp">
-
-
-         <TextView
-             android:layout_width="150dp"
-             android:layout_height="wrap_content"
-             android:textAppearance="?android:attr/textAppearanceLarge"
-             android:id="@+id/report_name"
-             android:textColor="@color/black_color"
-             android:textStyle="bold"
-             android:layout_centerVertical="true"
-             android:layout_alignParentStart="true"
-             android:layout_marginStart="29dp" />
-
-         <TextView
-             android:layout_width="100dp"
-             android:layout_height="wrap_content"
-             android:textAppearance="?android:attr/textAppearanceLarge"
-             android:id="@+id/status"
-             android:textColor="@color/black_color"
-             android:textStyle="bold"
-             android:layout_marginStart="10dp"
-             android:layout_alignTop="@+id/report_name"
-             android:layout_toEndOf="@+id/report_name" />
-
-         <ImageButton
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:id="@+id/download"
-             android:visibility="invisible"
-             android:src="@drawable/download_24"
-             android:layout_centerVertical="true"
-             android:layout_toEndOf="@+id/status"
-             android:layout_marginStart="10dp" />-->
     </RelativeLayout>
-
-
-   <!-- </RelativeLayout>-->
 
     <ImageButton
         android:layout_width="65dp"
@@ -87,3 +39,44 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
+
+    <!-- <RelativeLayout
+      android:layout_width="match_parent"
+      android:id="@+id/report_layout"
+      android:clickable="true"
+      android:background="#F2F2F2"
+      android:layout_height="80dp">
+
+
+      <TextView
+          android:layout_width="150dp"
+          android:layout_height="wrap_content"
+          android:textAppearance="?android:attr/textAppearanceLarge"
+          android:id="@+id/report_name"
+          android:textColor="@color/black_color"
+          android:textStyle="bold"
+          android:layout_centerVertical="true"
+          android:layout_alignParentStart="true"
+          android:layout_marginStart="29dp" />
+
+      <TextView
+          android:layout_width="100dp"
+          android:layout_height="wrap_content"
+          android:textAppearance="?android:attr/textAppearanceLarge"
+          android:id="@+id/status"
+          android:textColor="@color/black_color"
+          android:textStyle="bold"
+          android:layout_marginStart="10dp"
+          android:layout_alignTop="@+id/report_name"
+          android:layout_toEndOf="@+id/report_name" />
+
+      <ImageButton
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@+id/download"
+          android:visibility="invisible"
+          android:src="@drawable/download_24"
+          android:layout_centerVertical="true"
+          android:layout_toEndOf="@+id/status"
+          android:layout_marginStart="10dp" />
+</RelativeLayout>-->
